--- a/index.html
+++ b/index.html
@@ -11,123 +11,149 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header class="page-header">
         <!--навігація-->
-        <nav class="header-navigation">
-            <a class="logo" href="./index.html"><span class="blu">Web</span><span class="black">Studio</span></a>
+        <div class="container page-header-container">
+            <nav class="header-navigation">
+                <a class="logo" href="./index.html"><span class="blu">Web</span><span class="black">Studio</span></a>
+                <ul class="menu list header-menu">
+                    <li class="menu-item">
+                        <a class="link-nav" href="./index.html">Студія</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="link-nav" href="./portfolio.html">Портфоліо</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="link-nav" href="#Контакти">Контакти</a>
+                    </li>
+                </ul>
+            </nav>
             <ul class="menu list">
                 <li class="menu-item">
-                    <a class="link-nav" href="./index.html">Студія</a>
+                    <a class="menu-link-nav" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="menu-item">
-                    <a class="link-nav" href="./portfolio.html">Портфоліо</a>
-                </li>
-                <li class="menu-item">
-                    <a class="link-nav" href="#Контакти">Контакти</a>
+                    <a class="menu-link-nav" href="tel:+380961111111">+380961111111</a>
                 </li>
             </ul>
-        </nav>
-        <ul class="menu list">
-            <li class="menu-item">
-                <a class="menu-link-nav" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link-nav" href="tel:+380961111111">+380961111111</a>
-            </li>
-        </ul>
+        </div>
     </header>
     <main>
-        <section class="hero">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button class="hero-btn" type="button">Замовити послугу</button>
+        <section class="section hero">
+            <div class="container hero-box">
+                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+                <button class="hero-btn" type="button">Замовити послугу</button>
+            </div>
         </section>
-        <section class="section">
+        <section class="section feature-section">
             <h2 hidden>Наші переваги</h2>
-            <ul class="list">
-                <li class=feature-list>
-                    <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="feature-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
-                        позиції.
-                    </p>
-                </li>
-                <li class=feature-list>
-                    <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="feature-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-                    </p>
-                </li>
-                <li class=feature-list>
-                    <h3 class="feature-title">ПЛАНУВАННЯ</h3>
-                    <p class="feature-text">Так само консультація з широким активом значною мірою зумовлює.
-                    </p>
-                </li>
-                <li class=feature-list>
-                    <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="feature-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-                    </p>
-                </li>
-            </ul>
+            <div class="container">
+                <ul class="list list-benefits">
+                    <li class=feature-list>
+                        <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p class="feature-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
+                            позиції.
+                        </p>
+                    </li>
+                    <li class=feature-list>
+                        <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
+                        <p class="feature-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у
+                            себе.
+                        </p>
+                    </li>
+                    <li class=feature-list>
+                        <h3 class="feature-title">ПЛАНУВАННЯ</h3>
+                        <p class="feature-text">Так само консультація з широким активом значною мірою зумовлює.
+                        </p>
+                    </li>
+                    <li class=feature-list>
+                        <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p class="feature-text">Значимість цих проблем настільки очевидна, що реалізація планових
+                            завдань.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section class="section">
-            <h2 class="section-examples">Чим ми займаємося</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/box1.jpg" alt="Робочий стіл з клавіатурою і екраном" width="370">
-                </li>
-                <li>
-                    <img src="./images/box2.jpg" alt="Смартфон в руці на фоні екрану зі смартфонами" width="370">
-                </li>
-                <li>
-                    <img src="./images/box3.jpg" alt="Екран з різнокольоровим шестикутником" width="370">
-                </li>
-            </ul>
+        <section class="section examples-section">
+            <div class="container">
+                <h2 class="section-examples">Чим ми займаємося</h2>
+                <ul class="list list-examplex">
+                    <li class="examples-list">
+                        <img src="./images/box1.jpg" alt="Робочий стіл з клавіатурою і екраном" width="370">
+                    </li>
+                    <li class="examples-list">
+                        <img src="./images/box2.jpg" alt="Смартфон в руці на фоні екрану зі смартфонами" width="370">
+                    </li>
+                    <li class="examples-list">
+                        <img src="./images/box3.jpg" alt="Екран з різнокольоровим шестикутником" width="370">
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section class="section-team">
-            <h2 class="team-section-team">Наша команда</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/teammate1.jpg" alt="Усміхнений чоловік з бородою в окулярах" width="270">
-                    <h3 class="member-team">Ігор Дем'яненко</h3>
-                    <p class="team-list" lang="en">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/teammate2.jpg" alt="Усміхнена жінка з білим волоссям в окулярах" width="270">
-                    <h3 class="member-team">Ольга Рєпіна</h3>
-                    <p class="team-list" lang="en">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/teammate3.jpg" alt="Усміхнений чоловік в білій сорочці" width="270">
-                    <h3 class="member-team">Микола Тарасов</h3>
-                    <p class="team-list" lang="en">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/teammate4.jpg" alt="Чоловік в окулярах" width="270">
-                    <h3 class="member-team">Михайло Єрмаков</h3>
-                    <p class="team-list" lang="en">UI Designer</p>
-                </li>
-            </ul>
+        <section class="section section-team">
+            <div class="container">
+                <h2 class="team-section-team">Наша команда</h2>
+                <ul class="list list-team">
+                    <li class="member-list">
+                        <img src="./images/teammate1.jpg" alt="Усміхнений чоловік з бородою в окулярах" width="270">
+                        <div class="member-content">
+                            <h3 class="member-team">Ігор Дем'яненко</h3>
+                            <p class="team-list" lang="en">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="member-list">
+                        <img src="./images/teammate2.jpg" alt="Усміхнена жінка з білим волоссям в окулярах" width="270">
+                        <div class="member-content">
+                            <h3 class="member-team">Ольга Рєпіна</h3>
+                            <p class="team-list" lang="en">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="member-list">
+                        <img src="./images/teammate3.jpg" alt="Усміхнений чоловік в білій сорочці" width="270">
+                        <div class="member-content">
+                            <h3 class="member-team">Микола Тарасов</h3>
+                            <p class="team-list" lang="en">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="member-list">
+                        <img src="./images/teammate4.jpg" alt="Чоловік в окулярах" width="270">
+                        <div class="member-content">
+                            <h3 class="member-team">Михайло Єрмаков</h3>
+                            <p class="team-list" lang="en">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="contacts">
-        <a class="logo link" href="https://index.html"><span class="blu">Web</span><span class="white">Studio</span></a>
-        <address class="address">
-            <ul class="address-link list">
-                <li>
-                    <a class="a-contact" href="htpps://googlemaps/CPtrU1FHBa2aNyZL9" target="_blank"
-                        rel="noopener noreferrer nofollow">м.
-                        Київ, пр-т Лесі Українки, 26</a>
-                </li>
-                <li>
-                    <a class="mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="phone-link" href="tel:+380961111111">+380961111111</a>
-                </li>
-            </ul>
-        </address>
+        <section class="section footer-section">
+            <div class="container">
+                <a class="logo link logo-footer" href="https://index.html"><span class="blu">Web</span><span
+                        class="white">Studio</span></a>
+                <address class="address">
+                    <ul class="address-link list">
+                        <li>
+                            <a class="a-contact" href="htpps://googlemaps/CPtrU1FHBa2aNyZL9" target="_blank"
+                                rel="noopener noreferrer nofollow">м.
+                                Київ, пр-т Лесі Українки, 26</a>
+                        </li>
+                        <li>
+                            <a class="mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li>
+                            <a class="phone-link" href="tel:+380961111111">+380961111111</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+        </section>
     </footer>
 </body>
 
