--- a/portfolio.html
+++ b/portfolio.html
@@ -11,143 +11,174 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header class="page-header">
         <!--навігація-->
-        <nav class="header-navigation">
-            <a class="logo" href="./index.html"><span class="blu">Web</span><span class="black">Studio</span></a>
+        <div class="container page-header-container">
+            <nav class="header-navigation">
+                <a class="logo" href="./index.html"><span class="blu">Web</span><span class="black">Studio</span></a>
+                <ul class="menu list header-menu">
+                    <li class="menu-item">
+                        <a class="link-nav" href="./index.html">Студія</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="link-nav" href="./portfolio.html">Портфоліо</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="link-nav" href="#Контакти">Контакти</a>
+                    </li>
+                </ul>
+            </nav>
             <ul class="menu list">
                 <li class="menu-item">
-                    <a class="link-nav" href="./index.html">Студія</a>
+                    <a class="menu-link-nav" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="menu-item">
-                    <a class="current link-nav" href="./portfolio.html">Портфоліо</a>
-                </li>
-                <li class="menu-item">
-                    <a class="link-nav" href="#Контакти">Контакти</a>
+                    <a class="menu-link-nav" href="tel:+380961111111">+380961111111</a>
                 </li>
             </ul>
-        </nav>
-        <ul class="menu list">
-            <li class="menu-item">
-                <a class="menu-link-nav" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="mmenu-item">
-                <a class="menu-link-nav" href="tel:+380961111111">+380961111111</a>
-            </li>
-        </ul>
+        </div>
     </header>
 
     <main>
-        <section class="portfolio-section">
-            <h1 hidden>Портфоліо</h1>
-            <!--кнопки-фільтри-->
-            <ul class="list">
-                <li>
-                    <button class="section-btn" type="button">Усі</button>
-                </li>
-                <li>
-                    <button class="section-btn" type="button">Веб-сайти</button>
-                </li>
-                <li>
-                    <button class="section-btn" type="button">Додатки</button>
-                </li>
-                <li>
-                    <button class="section-btn" type="button">Дизайн</button>
-                </li>
-                <li>
-                    <button class="section-btn" type="button">Маркетинг</button>
-                </li>
-            </ul>
-            <!--картки портфоліо-->
-            <ul class="list">
-                <li>
-                    <a href="./portfolio.html">
-                        <img src="./images/portf1.jpg" alt="Сторінка з трьоиа контактами" width="370">
-                        <h2 class="portfolio-page">Технокряк</h2>
-                        <p class="portfolio-tytle">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./portfolio.html">
-                        <img src="./images/portf2.jpg" alt="Два баскетболісти" width="370">
-                        <h2 class="portfolio-page">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
-                        <p class="portfolio-tytle">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./portfolio.html">
-                        <img src="./images/portf3.jpg" alt="Логотип ресторану морепродуктів" width="370">
-                        <h2 class="portfolio-page">Ресторан<span lang="en">Seafood</span></h2>
-                        <p class="portfolio-tytle">Додаток</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./portfolio.html">
-                        <img src="./images/portf4.jpg" alt="Навушники" width="370">
-                        <h2 class="portfolio-page">Проєкт<span lang="en">Prime</span></h2>
-                        <p class="portfolio-tytle">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./portfolio.html">
-                        <img src="./images/portf5.jpg" alt="Дві коробочки" width="370">
-                        <h2 class="portfolio-page">Проєкт<span lang="en">Boxes</span></h2>
-                        <p class="portfolio-tytle">Додаток</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./portfolio.html">
-                        <img src="./images/portf6.jpg" alt="Монітор" width="370">
-                        <h2 class="portfolio-page"><span lang="en">Inspiration has no Borders</span></h2>
-                        <p class="portfolio-tytle">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./portfolio.html">
-                        <img src="./images/portf7.jpg" alt="Розгорнута книга з малюнками" width="370">
-                        <h2 class="portfolio-page">Видання<span lang="en">Limited Edition</span></h2>
-                        <p class="portfolio-tytle">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./portfolio.html">
-                        <img src="./images/portf8.jpg" alt="Бірка" width="370">
-                        <h2 class="portfolio-page">Проєкт<span lang="en">LAB</span></h2>
-                        <p class="portfolio-tytle">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./portfolio.html">
-                        <img src="./images/portf9.jpg" alt="Руки на клавіатурі ноутбуку" width="370">
-                        <h2 class="portfolio-page"><span lang="en">Growing Business</span></h2>
-                        <p class="portfolio-tytle">Додаток</p>
-                    </a>
-                </li>
-            </ul>
+        <section class="section portfolio-section">
+            <div class="container portfolio-container">
+                <h1 hidden>Портфоліо</h1>
+                <!--кнопки-фільтри-->
+                <ul class="list portfolio-list">
+                    <li>
+                        <button class="section-btn" type="button">Усі</button>
+                    </li>
+                    <li>
+                        <button class="section-btn" type="button">Веб-сайти</button>
+                    </li>
+                    <li>
+                        <button class="section-btn" type="button">Додатки</button>
+                    </li>
+                    <li>
+                        <button class="section-btn" type="button">Дизайн</button>
+                    </li>
+                    <li>
+                        <button class="section-btn" type="button">Маркетинг</button>
+                    </li>
+                </ul>
+                <!--картки портфоліо-->
+                <div class="container">
+                    <ul class="list portfolio-examples">
+                        <li class="portfolio-examples-list">
+                            <a href="./portfolio.html">
+                                <img src="./images/portf1.jpg" alt="Сторінка з трьоиа контактами" width="370">
+                                <div class="portfolio-page-title">
+                                    <h2 class="portfolio-page">Технокряк</h2>
+                                    <p class="portfolio-tytle">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-examples-list">
+                            <a href="./portfolio.html">
+                                <img src="./images/portf2.jpg" alt="Два баскетболісти" width="370">
+                                <div class="portfolio-page-title">
+                                    <h2 class="portfolio-page">Постер<span lang="en">New Orlean vs Golden Star</span>
+                                    </h2>
+                                    <p class="portfolio-tytle">Дизайн</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-examples-list">
+                            <a href="./portfolio.html">
+                                <img src="./images/portf3.jpg" alt="Логотип ресторану морепродуктів" width="370">
+                                <div class="portfolio-page-title">
+                                    <h2 class="portfolio-page">Ресторан<span lang="en">Seafood</span></h2>
+                                    <p class="portfolio-tytle">Додаток</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-examples-list">
+                            <a href="./portfolio.html">
+                                <img src="./images/portf4.jpg" alt="Навушники" width="370">
+                                <div class="portfolio-page-title">
+                                    <h2 class="portfolio-page">Проєкт<span lang="en">Prime</span></h2>
+                                    <p class="portfolio-tytle">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-examples-list">
+                            <a href="./portfolio.html">
+                                <img src="./images/portf5.jpg" alt="Дві коробочки" width="370">
+                                <div class="portfolio-page-title">
+                                    <h2 class="portfolio-page">Проєкт<span lang="en">Boxes</span></h2>
+                                    <p class="portfolio-tytle">Додаток</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-examples-list">
+                            <a href="./portfolio.html">
+                                <img src="./images/portf6.jpg" alt="Монітор" width="370">
+                                <div class="portfolio-page-title">
+                                    <h2 class="portfolio-page"><span lang="en">Inspiration has no Borders</span></h2>
+                                    <p class="portfolio-tytle">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-examples-list">
+                            <a href="./portfolio.html">
+                                <img src="./images/portf7.jpg" alt="Розгорнута книга з малюнками" width="370">
+                                <div class="portfolio-page-title">
+                                    <h2 class="portfolio-page">Видання<span lang="en">Limited Edition</span></h2>
+                                    <p class="portfolio-tytle">Дизайн</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-examples-list">
+                            <a href="./portfolio.html">
+                                <img src="./images/portf8.jpg" alt="Бірка" width="370">
+                                <div class="portfolio-page-title">
+                                    <h2 class="portfolio-page">Проєкт<span lang="en">LAB</span></h2>
+                                    <p class="portfolio-tytle">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-examples-list">
+                            <a href="./portfolio.html">
+                                <img src="./images/portf9.jpg" alt="Руки на клавіатурі ноутбуку" width="370">
+                                <div class="portfolio-page-title">
+                                    <h2 class="portfolio-page"><span lang="en">Growing Business</span></h2>
+                                    <p class="portfolio-tytle">Додаток</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
 
     <footer class="contacts">
-        <a class="link" href="https://index.html"><span class="blu">Web</span><span class="white">Studio</span></a>
-        <address class="address">
-            <ul class="address-links list">
-                <li>
-                    <a class="a-contact" href="htpps://googlemaps/CPtrU1FHBa2aNyZL9" target="_blank"
-                        rel="noopener noreferrer nofollow">м.
-                        Київ, пр-т Лесі Українки, 26</a>
-                </li>
-                <li>
-                    <a class="mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="phone-link" href="tel:+380961111111">+380961111111</a>
-                </li>
-            </ul>
-        </address>
+        <section class="section footer-section">
+            <div class="container">
+                <a class="logo link logo-footer" href="https://index.html"><span class="blu">Web</span><span
+                        class="white">Studio</span></a>
+                <address class="address">
+                    <ul class="address-link list">
+                        <li>
+                            <a class="a-contact" href="htpps://googlemaps/CPtrU1FHBa2aNyZL9" target="_blank"
+                                rel="noopener noreferrer nofollow">м.
+                                Київ, пр-т Лесі Українки, 26</a>
+                        </li>
+                        <li>
+                            <a class="mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li>
+                            <a class="phone-link" href="tel:+380961111111">+380961111111</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+        </section>
     </footer>
 </body>
 
