--- a/index.html
+++ b/index.html
@@ -133,27 +133,25 @@
         </section>
     </main>
     <footer class="contacts">
-        <section class="section footer-section">
-            <div class="container">
-                <a class="logo link logo-footer" href="https://index.html"><span class="blu">Web</span><span
-                        class="white">Studio</span></a>
-                <address class="address">
-                    <ul class="address-link list">
-                        <li>
-                            <a class="a-contact" href="htpps://googlemaps/CPtrU1FHBa2aNyZL9" target="_blank"
-                                rel="noopener noreferrer nofollow">м.
-                                Київ, пр-т Лесі Українки, 26</a>
-                        </li>
-                        <li>
-                            <a class="mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                        </li>
-                        <li>
-                            <a class="phone-link" href="tel:+380961111111">+380961111111</a>
-                        </li>
-                    </ul>
-                </address>
-            </div>
-        </section>
+        <div class="container">
+            <a class="logo link logo-footer" href="https://index.html"><span class="blu">Web</span><span
+                    class="white">Studio</span></a>
+            <address class="address">
+                <ul class="address-link list">
+                    <li class="contact-list">
+                        <a class="a-contact" href="htpps://googlemaps/CPtrU1FHBa2aNyZL9" target="_blank"
+                            rel="noopener noreferrer nofollow">м.
+                            Київ, пр-т Лесі Українки, 26</a>
+                    </li>
+                    <li class="contact-list">
+                        <a class="mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="contact-list">
+                        <a class="phone-link" href="tel:+380961111111">+380961111111</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
