--- a/portfolio.html
+++ b/portfolio.html
@@ -67,118 +67,114 @@
                     </li>
                 </ul>
                 <!--картки портфоліо-->
-                <div class="container">
-                    <ul class="list portfolio-examples">
-                        <li class="portfolio-examples-list">
-                            <a href="./portfolio.html">
-                                <img src="./images/portf1.jpg" alt="Сторінка з трьоиа контактами" width="370">
-                                <div class="portfolio-page-title">
-                                    <h2 class="portfolio-page">Технокряк</h2>
-                                    <p class="portfolio-tytle">Веб-сайт</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-examples-list">
-                            <a href="./portfolio.html">
-                                <img src="./images/portf2.jpg" alt="Два баскетболісти" width="370">
-                                <div class="portfolio-page-title">
-                                    <h2 class="portfolio-page">Постер<span lang="en">New Orlean vs Golden Star</span>
-                                    </h2>
-                                    <p class="portfolio-tytle">Дизайн</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-examples-list">
-                            <a href="./portfolio.html">
-                                <img src="./images/portf3.jpg" alt="Логотип ресторану морепродуктів" width="370">
-                                <div class="portfolio-page-title">
-                                    <h2 class="portfolio-page">Ресторан<span lang="en">Seafood</span></h2>
-                                    <p class="portfolio-tytle">Додаток</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-examples-list">
-                            <a href="./portfolio.html">
-                                <img src="./images/portf4.jpg" alt="Навушники" width="370">
-                                <div class="portfolio-page-title">
-                                    <h2 class="portfolio-page">Проєкт<span lang="en">Prime</span></h2>
-                                    <p class="portfolio-tytle">Маркетинг</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-examples-list">
-                            <a href="./portfolio.html">
-                                <img src="./images/portf5.jpg" alt="Дві коробочки" width="370">
-                                <div class="portfolio-page-title">
-                                    <h2 class="portfolio-page">Проєкт<span lang="en">Boxes</span></h2>
-                                    <p class="portfolio-tytle">Додаток</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-examples-list">
-                            <a href="./portfolio.html">
-                                <img src="./images/portf6.jpg" alt="Монітор" width="370">
-                                <div class="portfolio-page-title">
-                                    <h2 class="portfolio-page"><span lang="en">Inspiration has no Borders</span></h2>
-                                    <p class="portfolio-tytle">Веб-сайт</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-examples-list">
-                            <a href="./portfolio.html">
-                                <img src="./images/portf7.jpg" alt="Розгорнута книга з малюнками" width="370">
-                                <div class="portfolio-page-title">
-                                    <h2 class="portfolio-page">Видання<span lang="en">Limited Edition</span></h2>
-                                    <p class="portfolio-tytle">Дизайн</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-examples-list">
-                            <a href="./portfolio.html">
-                                <img src="./images/portf8.jpg" alt="Бірка" width="370">
-                                <div class="portfolio-page-title">
-                                    <h2 class="portfolio-page">Проєкт<span lang="en">LAB</span></h2>
-                                    <p class="portfolio-tytle">Маркетинг</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-examples-list">
-                            <a href="./portfolio.html">
-                                <img src="./images/portf9.jpg" alt="Руки на клавіатурі ноутбуку" width="370">
-                                <div class="portfolio-page-title">
-                                    <h2 class="portfolio-page"><span lang="en">Growing Business</span></h2>
-                                    <p class="portfolio-tytle">Додаток</p>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+                <ul class="list portfolio-examples">
+                    <li class="portfolio-examples-list">
+                        <a href="./portfolio.html">
+                            <img src="./images/portf1.jpg" alt="Сторінка з трьоиа контактами" width="370">
+                            <div class="portfolio-page-title">
+                                <h2 class="portfolio-page">Технокряк</h2>
+                                <p class="portfolio-tytle">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-examples-list">
+                        <a href="./portfolio.html">
+                            <img src="./images/portf2.jpg" alt="Два баскетболісти" width="370">
+                            <div class="portfolio-page-title">
+                                <h2 class="portfolio-page">Постер<span lang="en">New Orlean vs Golden Star</span>
+                                </h2>
+                                <p class="portfolio-tytle">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-examples-list">
+                        <a href="./portfolio.html">
+                            <img src="./images/portf3.jpg" alt="Логотип ресторану морепродуктів" width="370">
+                            <div class="portfolio-page-title">
+                                <h2 class="portfolio-page">Ресторан<span lang="en">Seafood</span></h2>
+                                <p class="portfolio-tytle">Додаток</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-examples-list">
+                        <a href="./portfolio.html">
+                            <img src="./images/portf4.jpg" alt="Навушники" width="370">
+                            <div class="portfolio-page-title">
+                                <h2 class="portfolio-page">Проєкт<span lang="en">Prime</span></h2>
+                                <p class="portfolio-tytle">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-examples-list">
+                        <a href="./portfolio.html">
+                            <img src="./images/portf5.jpg" alt="Дві коробочки" width="370">
+                            <div class="portfolio-page-title">
+                                <h2 class="portfolio-page">Проєкт<span lang="en">Boxes</span></h2>
+                                <p class="portfolio-tytle">Додаток</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-examples-list">
+                        <a href="./portfolio.html">
+                            <img src="./images/portf6.jpg" alt="Монітор" width="370">
+                            <div class="portfolio-page-title">
+                                <h2 class="portfolio-page"><span lang="en">Inspiration has no Borders</span></h2>
+                                <p class="portfolio-tytle">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-examples-list">
+                        <a href="./portfolio.html">
+                            <img src="./images/portf7.jpg" alt="Розгорнута книга з малюнками" width="370">
+                            <div class="portfolio-page-title">
+                                <h2 class="portfolio-page">Видання<span lang="en">Limited Edition</span></h2>
+                                <p class="portfolio-tytle">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-examples-list">
+                        <a href="./portfolio.html">
+                            <img src="./images/portf8.jpg" alt="Бірка" width="370">
+                            <div class="portfolio-page-title">
+                                <h2 class="portfolio-page">Проєкт<span lang="en">LAB</span></h2>
+                                <p class="portfolio-tytle">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-examples-list">
+                        <a href="./portfolio.html">
+                            <img src="./images/portf9.jpg" alt="Руки на клавіатурі ноутбуку" width="370">
+                            <div class="portfolio-page-title">
+                                <h2 class="portfolio-page"><span lang="en">Growing Business</span></h2>
+                                <p class="portfolio-tytle">Додаток</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
 
     <footer class="contacts">
-        <section class="section footer-section">
-            <div class="container">
-                <a class="logo link logo-footer" href="https://index.html"><span class="blu">Web</span><span
-                        class="white">Studio</span></a>
-                <address class="address">
-                    <ul class="address-link list">
-                        <li>
-                            <a class="a-contact" href="htpps://googlemaps/CPtrU1FHBa2aNyZL9" target="_blank"
-                                rel="noopener noreferrer nofollow">м.
-                                Київ, пр-т Лесі Українки, 26</a>
-                        </li>
-                        <li>
-                            <a class="mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                        </li>
-                        <li>
-                            <a class="phone-link" href="tel:+380961111111">+380961111111</a>
-                        </li>
-                    </ul>
-                </address>
-            </div>
-        </section>
+        <div class="container">
+            <a class="logo link logo-footer" href="https://index.html"><span class="blu">Web</span><span
+                    class="white">Studio</span></a>
+            <address class="address">
+                <ul class="address-link list">
+                    <li class="contact-list">
+                        <a class="a-contact" href="htpps://googlemaps/CPtrU1FHBa2aNyZL9" target="_blank"
+                            rel="noopener noreferrer nofollow">м.
+                            Київ, пр-т Лесі Українки, 26</a>
+                    </li>
+                    <li class="contact-list">
+                        <a class="mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="contact-list">
+                        <a class="phone-link" href="tel:+380961111111">+380961111111</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
