the final fixes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a class="logo" href="./index.html"><span class="blu">Web</span><span class="black">Studio</span></a>
                 <ul class="menu list header-menu">
                     <li class="menu-item">
-                        <a class="link-nav" href="./index.html">Студія</a>
+                        <a class="link-nav current" href="./index.html">Студія</a>
                     </li>
                     <li class="menu-item">
                         <a class="link-nav" href="./portfolio.html">Портфоліо</a>
@@ -51,7 +51,7 @@
             </div>
         </section>
         <section class="section feature-section">
-            <h2 hidden>Наші переваги</h2>
+            <h2 class="visually-hidden">Наші переваги</h2>
             <div class="container">
                 <ul class="list list-benefits">
                     <li class=feature-list>
