--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                         <a class="link-nav" href="./index.html">Студія</a>
                     </li>
                     <li class="menu-item">
-                        <a class="link-nav" href="./portfolio.html">Портфоліо</a>
+                        <a class="link-nav current" href="./portfolio.html">Портфоліо</a>
                     </li>
                     <li class="menu-item">
                         <a class="link-nav" href="#Контакти">Контакти</a>
@@ -46,7 +46,7 @@
 
     <main>
         <section class="section portfolio-section">
-            <div class="container portfolio-container">
+            <div class="container">
                 <h1 hidden>Портфоліо</h1>
                 <!--кнопки-фільтри-->
                 <ul class="list portfolio-list">
